# agenticaiengg

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_email.py
src/: app.py  init.py  main.py
src/deep_research/: deep_research.py  email_agent.py  research_manager.py
src/me/: summary.txt
tests/: test_main.py
