[project]
name = "agenticaiengg"
version = "0.1.0"
description = "A minimal Python project using UV."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.13.5"
readme = "README.md"
dependencies = [
    "openai-agents>=0.2.4",
    "openai>=1.68.2",
    "python-dotenv>=1.0.1",
    "pypdf>=5.4.0",
    "gradio>=5.22.0",
    "sendgrid>=6.11.0",
    "requests>=2.32.3",
    "huggingface-hub>=0.34.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
